# Vulkan

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  create_vulkan_struct_builder.py  file_to_cpp_string.cmake  format_files.py  generate_vulkan_struct.py  print_mesh_bounds.py
lib/imgui/: imgui.cpp  imgui_draw.cpp
lib/sdl/include/: SDL_atomic.h  SDL_audio.h  SDL_blendmode.h  SDL_events.h  SDL_gamecontroller.h  SDL_haptic.h  SDL_hints.h  SDL_joystick.h  SDL_loadso.h  SDL_locale.h  SDL_mouse.h  SDL_platform.h  SDL_render.h  SDL_rwops.h  SDL_sensor.h  SDL_surface.h  SDL_system.h  SDL_video.h
profiling/: CMakeLists.txt  main.cc
resources/shaders/: light.frag  light.vert  particles.comp  particles.frag  particles.vert  sky.frag  sky.vert  skybox.frag  skybox.vert  spaceship.frag  spaceship.vert  text.frag  text.vert  ui.vert
resources/ui_pages/: pause_menu.xml
src/: App.cc  App.cpp  App.h  AppNetwork.h  BufferWithMemory.h  CMakeLists.txt  DynamicUniformBuffer.h  DynamicUniformBufferInitializer.cpp  DynamicUniformBufferInitializer.h  GlmIncl.h  GradientCube.cpp  GradientCube.h  GradientVertex.h  ImageWithMemory.h  Iterable.h  Keyboard.cpp  Keyboard.h  Model.cpp  Model.h  Mouse.h  MultithreadedMessageQueue.h  NormalizedOneTimeFunctionAnimation.h  Rect.h  SdlIncl.h  Settings.cc  Settings.h  SwapchainWithResources.cpp  SwapchainWithResources.h  TextRenderer.h  TexturedVertex.h  UiRenderer.cpp  UiRenderer.h  UpAndDownGlidingAnimation.cpp  UpAndDownGlidingAnimation.h  Vertex.h  VertexBuilder.cpp  VertexBuilder.h  ViewTransform.h  Vulkan.cc  Vulkan.cpp  (+20 more)
src/core/: clock.h  literals.h  types.h
src/core/adapters/: Iterable.h  MapValueIterator.h  function_traits.h
src/core/algorithms/: HuffmanTree.h  KeyGenerator.cc  KeyGenerator.h  RandomNumberGenerator.h
src/core/diagnostics/: ErrorReport.h  ErrorReporter.cc  ErrorReporter.h  SoundErrorReporter.h  log.h  profile.h
src/core/files/: DrawVertices.h  bmp.cc  bmp.h  file.cc  file.h  obj.cc  obj.h  vertex_loader.h
src/core/images/: Bitmap.cc  Bitmap.h
src/core/logging/: log.h
src/core/math/: Range.h  Rect.h  bits.cc  bits.h  bytes.h  clamp.h  integer_math.h  transform.h  wrap.h
src/core/operations/: Consumer.h
src/core/profiling/: profile.h
src/core/strings/: format.cc  format.h  split.h
src/core/text/: FontAtlas.cc  FontAtlas.h  GlyphString.h
src/core/threading/: BinarySemaphore.h  MultithreadedMessageQueue.h
src/engine/: RenderPerformanceTracker.cc  RenderPerformanceTracker.h
src/engine/actor/: Actor.h  ActorKey.h  ActorOwner.h
src/engine/behaviour/: Behaviour.h  UpdateContext.h  Updateable.h
src/engine/composition/: ActorConsumer.h  ActorToSpawn.h  CompositionBuilder.cc  CompositionBuilder.h  LightSource.h  LightSourceComposition.h  MeshHandle.h  MeshLoadParams.h  ParticleBehaviour.h  PointLight.cc  PointLight.h  RenderType.h  Renderer.h  SceneComposer.cc  SceneComposer.h  SceneGraph.cc  SceneGraph.h  SpawnDependencies.h  behaviour_utils.h  parameter_utils.h
src/engine/property/: Property.h  PropertyCollection.h  PropertyKey.h
src/engine/resource/: CompositeResource.h  ReleaseListResource.h  Resource.h  ResourceCollection.cc  ResourceCollection.h  ResourceKey.h  ResourceList.h
src/engine/ui/: Action.h  Bindable.h  Binding.h  Bound.h  Canvas.h  Color.h  DistanceUnit.h  DrawList.h  Element.h  ElementContainer.h  Event.h  EventConsumer.h  FocusTracker.cc  FocusTracker.h  Focusable.h  (+19 more)
src/game/: Actor.h  Camera.cc  Camera.cpp  Camera.h  Controls.cc  Controls.cpp  Controls.h  DebugViewDrawList.cc  DebugViewDrawList.h  DrawList.h  GraphicsSettingsConfigurator.h  LightSource.h  Network.h  NetworkedPlayerController.cpp  NetworkedPlayerController.h  Npc.cpp  Npc.h  Player.cpp  Player.h  RenderPipeline.cc  RenderPipeline.cpp  RenderPipeline.h  Renderer.h  ResourceAllocator.cpp  ResourceAllocator.h  Scene.cc  Scene.cpp  Scene.h  SceneDescriptor.cpp  SceneDescriptor.h  SpaceshipModel.cpp  SpaceshipModel.h  SpawnControllable.h  Transformable.h  UpdateContext.h  Visible.h  ui_pages.h
src/memory/: Alignment.cpp  Alignment.h  AllocatedBlock.h  Allocator.h  BlockBasedAllocator.cc  BlockBasedAllocator.h  DeviceHeap.cc  DeviceHeap.cpp  DeviceHeap.h  DeviceMemoryAllocator.cc  DeviceMemoryAllocator.cpp  DeviceMemoryAllocator.h  DeviceMemorySubAllocation.h  MemoryAllocation.h  MemoryBlock.h  MemoryObject.h  ReservedBlock.cc  ReservedBlock.cpp  ReservedBlock.h  ReservedMemory.cpp  std_allocator.h
src/server/: Server.cpp  Server.h  inputs.h  server_main.cpp
src/shaders/: gradient_cube.frag  gradient_cube.vert  light.frag  light.vert  particles.vert  shader.frag  sky.frag  spaceship.frag  textured_cube.frag  textured_cube.vert  uiShader.frag  uiShader.vert
src/system/: System.cc  System.h
src/util/: build_definition.h  filenames.h  project.h  types.h
src/vulkan/: Buffer.cpp  Buffer.h  CommandBuffer.cpp  CommandBuffer.h  CommandPool.cpp  CommandPool.h  DebugUtilsMessenger.cc  DebugUtilsMessenger.cpp  DebugUtilsMessenger.h  DescriptorPool.cc  DescriptorPool.cpp  DescriptorPool.h  DescriptorSet.cpp  DescriptorSet.h  DescriptorSetLayout.cc  DescriptorSetLayout.cpp  DescriptorSetLayout.h  DeviceMemory.cc  DeviceMemory.cpp  DeviceMemory.h  Fence.cc  Fence.cpp  Fence.h  Framebuffer.cc  Framebuffer.cpp  Framebuffer.h  ImGuiInstance.cpp  ImGuiInstance.h  Image.cc  Image.cpp  Image.h  ImageView.cpp  ImageView.h  PhysicalDevice.cpp  PhysicalDevice.h  Pipeline.cpp  Pipeline.h  PipelineCache.cc  PipelineCache.cpp  PipelineCache.h  (+37 more)
test/: CMakeLists.txt  matchers.h
test/core/algorithms/: HuffmanTreeTest.cc
test/core/files/: ReadBmpTest.cc  ReadObjTest.cc
test/core/files/images/: ReadBmpTest.cc  ReadPngTest.cc
test/core/files/png/: HuffmanCode_test.cc  decompress_deflate_test.cc  png_test.cc
test/engine/ui/: parse_xml_tree_test.cc
test/game/ui/: ParseXmlTreeTest.cc
test/general/algorithms/: HuffmanTreeTest.cc
test/general/files/: ReadObjTest.cc
test/general/files/images/: ReadBmpTest.cc  ReadBmpTest.cpp  ReadPngTest.cc  ReadPngTest.cpp
test/memory/: DeviceHeapTest.cc  DeviceHeapTest.cpp
(+647 files in other folders)
